# veadk-python

./: .gitignore  .gitleaks.toml  .licenserc.yaml  .pre-commit-config.yaml  .secret-key-patterns  README.md  agent.py  config.yaml.example  config.yaml.full  config.yaml.simple  deep_eval_test.py  pyproject.toml  pytest.ini  requirements.txt  test_to_a2a_auth_switch.py  veadk_tutorial.ipynb
.github/: Dockerfile  Dockerfile.preview
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  question.yml
.github/hooks/: pre-commit
.github/workflows/: deploy-docs-agent.yaml  deploy-docs.yaml  lastest-image-to-ark-cr.yaml  latest-image-to-ark-cr.yaml  license-header-check.yaml  mirror-to-registry.yaml  preview-image-to-ark-cr.yaml  publish-tag-to-pypi.yaml  push-preview-image-to-vecr.yaml  push-stable-image-to-vecr.yaml  secrets-scan.yaml  unit-tests.yaml
docker/: Dockerfile.preview  Dockerfile.stable
docs/: .gitignore  AGENT.md  README.md  mkdocs.yml  next.config.mjs  nuxt.config.js  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  source.config.ts
docs/app/: app_agent.yaml  host_agent.yaml  itops_root.yaml  layout.tsx  network_agent.yaml  page.tsx  sec_agent.yaml
docs/ask-ai-agent/: .env.example  README.md  agent.py  build_index.py  docs_search.py  requirements.txt  serve.py
docs/components/: html-lang.tsx  mdx.tsx  search.tsx
docs/content/: index.md
docs/docs/: README.md  __init__.py  agent.md  cli.md  configuration.md  deploy.md  design.md  evaluation.md  get-started.md  index.md  installation.md  introduction.md  knowledgebase.md  memory.md  optimization.md  quickstart.md  runner.md  tool.md  tracing.md  veadk-studio.md  veadk.md
docs/lib/: chat-types.ts  i18n-ui.ts  i18n.ts  layout.shared.tsx  shared.ts  source.ts
docs/scripts/: build-static.mjs
examples/: README.md  README.zh.md
examples/01_quickstart/: .env.example  README.md  README.zh.md  main.py
examples/02_custom_tools/: .env.example  README.md  README.zh.md  main.py
examples/03_short_term_memory/: README.md  README.zh.md  main.py
examples/04_web_search/: .env.example  README.md  README.zh.md  main.py
examples/05_knowledgebase_rag/: .env.example  README.md  README.zh.md  main.py
examples/06_multi_agent/: README.md  README.zh.md  main.py
examples/07_structured_output/: README.md  README.zh.md  main.py
examples/08_model_config/: .env.example  README.md  README.zh.md  main.py
examples/09_long_term_memory/: .env.example  README.md  README.zh.md  main.py
examples/10_agent_routing/: README.md  README.zh.md  main.py
examples/11_tracing/: .env.example  README.md  README.zh.md  main.py
examples/12_mcp-tunnel/: .dockerignore  .gitignore  README.zh.md  requirements.txt
examples/14_harness_server_on_agentkit/: .env.example  .gitignore  README.md  README.zh.md  requirements.txt
examples/14_mcp-tunnel/: .env.example  README.md
examples/15_legacy_skills/: main.py
examples/a2ui_agent/: agent.py
examples/basic-app/: README.md  README.zh.md  app.py  requirements.txt
examples/codex_runtime_on_agentkit/: .env.example  README.md  README.zh.md  app.py  requirements.txt
examples/dogfooding/: VEADK_COMPONENTS.md  agent.py
examples/dogfooding_b/: agent.py
examples/front_with_sso/: README.md  agent.py  run.sh
examples/harness/: README.md  README.zh.md  __init__.py  harness_agent.py  main.py
examples/harness_app_runtime/: README.md  stable_latency_token_case.py
examples/harness_runner_plugins/: README.md  agent.py
examples/sso_frontend_on_agentkit/: .dockerignore  .env.example  README.md  README.zh.md  app.py  requirements.txt
examples/tunnel/: app.py  connector.py  local_mcp_server.py
examples/veadk-vanna-proj/: clean.py  deploy.py
examples/web_demo/: agent.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  blocks.ts  main.tsx  styles.css
ide/trae/: system_prompt.md
intent_and_sql_tools/: README.md  app.py  train.py
intent_and_sql_tools/sdk/: __init__.py  compiler.py  core_engine.py  registry.py
intent_and_sql_tools/tests/: test_sdk_flow.py
samples/template-project-for-vefaas/: README.md  deploy.py
tests/: __init__.py  test_a2a_credentials.py  test_a2a_request_converter.py  test_adk_compat.py  test_adk_compat_regression.py  test_agent.py  test_agent_builder.py  test_agent_card.py  test_backends.py  test_cli_frontend_agentkit_proxy.py  test_cloud.py  test_database_configs.py  test_evaluator.py  test_feishu_channel_extension.py  test_knowledgebase.py  test_long_term_memory.py  test_misc.py  test_multiple_agents.py  test_pdf_to_images.py  test_runner.py  test_runtime_data_collecting.py  test_short_term_memory.py  test_short_term_memory_api_backend.py  test_tos.py  test_tracing.py  test_tracing_content.py  test_ve_a2a_middlewares.py  test_ve_identity_auth_config.py  test_ve_identity_function_tool.py  test_ve_identity_mcp_tool.py  test_ve_identity_mcp_toolset.py  testing_utils.py  utils.py
tests/a2a/: __init__.py  test_registry_client.py  (+2 more)
veadk/: __init__.py  agent.py  agent_builder.py  config.py  configs.py  consts.py  harness.py  runner.py  types.py  version.py
(+1352 files in other folders)
